--- a/assets/style.css
+++ b/assets/style.css
@@ -72,7 +72,7 @@ nav {
  
 
 }
-/*   
+  
   ul {
     list-style-type: none;
     margin: 0;
@@ -107,7 +107,7 @@ nav {
   .vline {
       border-right: 1px solid black;
       height: 50px;
-  } */
+  }
   
 
 section {
